<resources>
    <string name="app_name">Новости Спорта</string>
    <string name="item_football">Футбол</string>
    <string name="item_hockey">Хоккей</string>
    <string name="item_tennis">Теннис</string>
    <string name="item_basketball">Баскетбол</string>
    <string name="item_volleyball">Волейбол</string>
    <string name="item_cybersport">Киберспорт</string>
    <string name="connection_error">При соединении с сервером произошла ошибка</string>
    <string name="event_info">Информация о событии</string>
    <string name="event_loading_error">Данные невозможно загрузить</string>
</resources>
